# customers_billing

./: Cargo.toml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .env  Cargo.toml
apps/api/migrations/: 20231222150346_users.up.sql
apps/api/src/: main.rs
apps/api/src/auth/: mod.rs
apps/api/src/user/: mod.rs
apps/front/: components.json  package.json
apps/front/src/: App.tsx  main.tsx
