[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.40"
poem = "1.2"
poem-openapi = { version = "3.0.6", features = ["swagger-ui"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
