[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
serde = "1.0.193"
tracing = "0.1.40"
chrono = {version = "0.4.31", features = ["serde"]}
poem = "1.2"
poem-openapi = { version = "3.0.6", features = ["swagger-ui", "chrono"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono" ] }
argon2 = "0.5.2"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"